--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>YouTube Clone</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="videos">
+      <section class="video-section">
+        <article class="video-container">
+          <a href="#" class="thumbnail">
+            <img src="http://unsplash.it/250/150?gravity=center" alt="video
+            class="thumbnail-image" />
+          </a>
+        </article>
+      </section>
+    </div>
+  </body>
 </html>
