--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
             <img src="http://unsplash.it/250/150?gravity=center" alt="video
             class="thumbnail-image" />
           </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+          </div>
         </article>
       </section>
     </div>
