--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
                 class="channel-icon"
               />
             </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
           </div>
         </article>
       </section>
