--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="videos">
       <section class="video-section">
         <article class="video-container">
-          <a href="#" class="thumbnail" data-duration="">
+          <a href="#" class="thumbnail" data-duration="40:01">
             <img src="http://unsplash.it/250/150?gravity=center" alt="video
             class="thumbnail-image" />
           </a>
