--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
       <section class="video-section">
         <article class="video-container">
           <a href="#" class="thumbnail" data-duration="40:01">
-            <img src="http://unsplash.it/250/150?gravity=center" alt="video
-            class="thumbnail-image" />
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
           </a>
           <div class="video-bottom-section">
             <a href="#">
