--- a/index.html
+++ b/index.html
@@ -32,6 +32,361 @@
             <div class="video-details">
               <a href="#" class="video-title">Video-Title</a>
               <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-metadata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+      <section class="video-section">
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-metadata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="metaldata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+      </section>
+      <section class="video-section">
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
+              <div class="video-metadata">
+                <span>100K views</span>
+                &#x2022;
+                <span>1 month ago</span>
+              </div>
+            </div>
+          </div>
+        </article>
+        <article class="video-container">
+          <a href="#" class="thumbnail" data-duration="40:01">
+            <img
+              src="http://unsplash.it/250/150?gravity=center"
+              alt="video"
+              class="thumbnail-image"
+            />
+          </a>
+          <div class="video-bottom-section">
+            <a href="#">
+              <img
+                src="http://unsplash.it/36/36?gravity=center"
+                alt=""
+                class="channel-icon"
+              />
+            </a>
+            <div class="video-details">
+              <a href="#" class="video-title">Video-Title</a>
+              <a href="#" class="video-channel-name">Channel Name</a>
               <div class="metaldata">
                 <span>100K views</span>
                 &#x2022;
