--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
         </article>
       </section>
       <section class="video-section">
+        <h2 class="video-section-title">
+          Special Section
+          <button class="video-section-title-close">&times;</button>
+        </h2>
         <article class="video-container">
           <a href="#" class="thumbnail" data-duration="40:01">
             <img
