--- a/index.html
+++ b/index.html
@@ -23,6 +23,26 @@
         <button class="category">category 7</button>
         <button class="category">category 8</button>
         <button class="category">category 9</button>
+        <button class="category active">10</button>
+        <button class="category">category 11</button>
+        <button class="category">category 12</button>
+        <button class="category">category 13</button>
+        <button class="category">category 14</button>
+        <button class="category">category 15</button>
+        <button class="category">category 16</button>
+        <button class="category">category 17</button>
+        <button class="category">category 18</button>
+        <button class="category">category 19</button>
+        <button class="category">category 20</button>
+        <button class="category">category 21</button>
+        <button class="category">category 22</button>
+        <button class="category">category 23</button>
+        <button class="category">category 24</button>
+        <button class="category">category 25</button>
+        <button class="category">category 26</button>
+        <button class="category">category 27</button>
+        <button class="category">category 28</button>
+        <button class="category">category 29</button>
       </section>
     </div>
     <div class="videos">
