--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <button class="category">category 7</button>
         <button class="category">category 8</button>
         <button class="category">category 9</button>
-        <button class="category active">10</button>
+        <button class="category">category 10</button>
         <button class="category">category 11</button>
         <button class="category">category 12</button>
         <button class="category">category 13</button>
