--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
     />
   </head>
   <body>
+    <header class="header">
+      <a href="#">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/YouTube_Logo_2017.svg/1280px-YouTube_Logo_2017.svg.png"
+          alt="Youtube Logo"
+          class="youtube-logo"
+        />
+      </a>
+      <form action="none" class="search-bar">
+        <input
+          type="search"
+          class="search-input"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button type="submit"></button>
+      </form>
+    </header>
     <div class="categories">
       <section class="category-section">
         <button class="category active">All</button>
