--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <button type="submit"></button>
+        <button type="submit">
+          <img src="./assets/magnify.svg" alt="" class="search-btn" />
+        </button>
       </form>
+      <div class="menu-icons"></div>
     </header>
     <div class="categories">
       <section class="category-section">
