header html content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
           <img src="./assets/magnify.svg" alt="" class="search-btn" />
         </button>
       </form>
-      <div class="menu-icons"></div>
+      <div class="menu-icons">
+        <a href="#">
+          <img src="./assets/video-plus.svg" alt="" />
+        </a>
+        <a href="#">
+          <img src="./assets/bell.svg" alt="" />
+        </a>
+        <a href="#">
+          <img
+            src="https://static.thenounproject.com/png/3492499-200.png"
+            alt=""
+          />
+        </a>
+      </div>
     </header>
     <div class="categories">
       <section class="category-section">
