.search-bar .search-input

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://seeklogo.com/images/Y/youtube-logo-FF3BEE4378-seeklogo.com.png"
+    />
   </head>
   <body>
     <header class="header">
