.menu-channel-icon

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <img
             src="https://static.thenounproject.com/png/3492499-200.png"
             alt=""
+            class="menu-channel-icon"
           />
         </a>
       </div>
