.sidebar-category-section

--- a/index.html
+++ b/index.html
@@ -53,9 +53,51 @@
     </header>
     <div class="page-container">
       <aside class="sidebar">
-        <div class="sidebar-category">
-          <img src="./assets/icons8-home.svg" alt="" />
-          Home
+        <div class="sidebar-category-section">
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Home
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Shorts
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Subscriptions
+          </div>
+        </div>
+        <div class="sidebar-category-section">
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            You
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            History
+          </div>
+        </div>
+        <div class="sidebar-category-section">
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Trending
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Music
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Live
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Gaming
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Sports
+          </div>
         </div>
       </aside>
       <div class="content-container">
