--- a/index.html
+++ b/index.html
@@ -54,27 +54,71 @@
     <div class="page-container">
       <aside class="sidebar">
         <div class="sidebar-category-section">
-          <div class="sidebar-category">
+          <div class="sidebar-category sidebar-category-active">
             <img src="./assets/icons8-home.svg" alt="" />
             Home
           </div>
           <div class="sidebar-category">
-            <img src="./assets/icons8-home.svg" alt="" />
+            <img src="./assets/youtube-shorts-logo-15251.svg" alt="" />
             Shorts
           </div>
           <div class="sidebar-category">
-            <img src="./assets/icons8-home.svg" alt="" />
+            <img src="./assets/icons8-video-playlist-25.png" alt="" />
             Subscriptions
           </div>
         </div>
         <div class="sidebar-category-section">
           <div class="sidebar-category">
-            <img src="./assets/icons8-home.svg" alt="" />
+            <img src="./assets/icons8-video-gallery-16.png" alt="" />
             You
           </div>
           <div class="sidebar-category">
-            <img src="./assets/icons8-home.svg" alt="" />
+            <img src="./assets/icons8-history-24.png" alt="" />
             History
+          </div>
+        </div>
+        <div class="sidebar-category-section">
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Trending
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-musical-25.png" alt="" />
+            Music
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Live
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Gaming
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Sports
+          </div>
+        </div>
+        <div class="sidebar-category-section">
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Trending
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-musical-25.png" alt="" />
+            Music
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Live
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Gaming
+          </div>
+          <div class="sidebar-category">
+            <img src="./assets/icons8-home.svg" alt="" />
+            Sports
           </div>
         </div>
         <div class="sidebar-category-section">
