--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
   </head>
   <body>
     <header class="header">
+      <div class="menu-icon">
+        <div class="dash"></div>
+        <div class="dash"></div>
+        <div class="dash"></div>
+      </div>
       <a href="#">
         <img
           src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b8/YouTube_Logo_2017.svg/1280px-YouTube_Logo_2017.svg.png"
